fix image placement on safari

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,11 +42,12 @@ body {
   @media only screen and (max-width: $md) {
     align-content: flex-start;
   }
+}
 
+.flex-container {
   &--persona {
     @extend .flex-container;
-    justify-content: space-between;
-    align-content: center;
+    place-items: center;
 
     & > * {
       flex: 1 250px;
